# convrs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  WEB_VERSION.md  arda.toml  arda.yaml  index.html  invalid1.json  package.json  start-web.bat  start-web.sh  test.toml  test.yaml  test_errors.sh  test_output.toml  test_toml.rs
crates/convrs-cli/: Cargo.toml
crates/convrs-cli/src/: lib.rs  main.rs
crates/convrs-cli/tests/: cli.rs
crates/convrs-core/: Cargo.toml
crates/convrs-core/src/: error.rs  format.rs  lib.rs
crates/convrs-core/src/formats/: csv.rs  json.rs  mod.rs  toml.rs  utils.rs  yaml.rs
crates/convrs-core/tests/: conversion.rs
crates/convrs-web/: Cargo.toml
crates/convrs-web/src/: main.rs
examples/: enum_usage.rs
src/: detect.rs  error.rs  format.rs  lib.rs  main.rs
src/formats/: csv.rs  json.rs  mod.rs  toml.rs  utils.rs  yaml.rs
src/ui/: app.rs
tests/: actualtoml.toml  broken.toml  data2.csv  deee.json  gggg.yml  hello.toml  hello.yaml  important.csv  kopyyy.json  koyy.json  koyy.toml  koyy.yaml  lol.json  nested_output.json  nested_output.yaml  nested_test.json  nested_users.csv  no_commas.csv  out_csv_to_csv.csv  out_csv_to_toml.toml  out_json_to_csv.csv  out_json_to_toml.toml  out_yaml_to_yaml.yaml  roror.json  rrrr.csv  test_check_flat.json  test_csv_refactored.toml  test_final_check.toml  test_yaml_parse.toml  this2.json  users.csv  users.toml  users_roundtrip.csv  verify.yaml
typst/: ASP_Leaflet_Arda_Karadavut.md  BEISPIEL_IR_PATTERN.md  E-Learning_Plan_ASP_CLI.typ  Formative_Pruefung_ASP.md  leaflet.typ
