[package]
name = "convrs"
version = "0.1.0"
edition = "2024"

# Definiere Binaries
[[bin]]
name = "convrs"          # CLI-Tool
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "convrs-web"      # Web-Version
path = "src/bin/web.rs"
required-features = ["web"]

[features]
default = ["cli"]
cli = ["clap"]
web = ["wasm-bindgen", "console_error_panic_hook", "web-sys"]

[dependencies]
# Gemeinsame Dependencies (immer verfügbar)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"

# CLI-spezifisch
clap = { version = "4.5", features = ["derive"], optional = true }

# Web-spezifisch
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "Window",
    "Navigator",
    "Clipboard",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Nur für WASM-Builds
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard", "ClipboardItem"] }