[package]
name = "convrs-cli"
version = "0.1.0"
edition = "2024"
description = "CLI-Tool für Datenformat-Konvertierung"

[[bin]]
name = "convrs"
path = "src/main.rs"

[dependencies]
convrs-core = { path = "../convrs-core" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
