[package]
name = "convrs-web"
version = "0.1.0"
edition = "2024"
description = "WebAssembly-Version des Datenformat-Converters"

[[bin]]
name = "convrs-web"
path = "src/main.rs"

[dependencies]
convrs-core = { path = "../convrs-core" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "Window",
    "Navigator",
    "Clipboard",
] }
